<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_message_general">Something went wrong.</string>
    <string name="navigate_up">Navigate up</string>
</resources>